# GrowthIQ

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: main_growthiq.yml
app-deployment/: parameters.json  template.json
db-deployment/: parameters.json  template.json
growthiq/: analyze_screened_json.py  analyze_sp500_json.py  growth_dashboard.py  nasdaq_components.csv  plot_data.py  prefetch_data.py  screened_data.json
