[tool.poetry]
name = "multi-indicator-strategy"
version = "0.1.0"
description = ""
authors = ["Hassan K. Najjar <hnajjar.ab@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
Python = '>=3.10,<=3.11.9'
numpy = "1.24"
pandas-ta = "^0.3.14b0"
streamlit = "^1.38.0"
yfinance = "^0.2.43"
plotly = "^5.24.1"
dash = "^2.18.1"
yahoo-fin = "^0.8.9.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
prettytable = "^3.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
